--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="background">
 
-  Capture and Share the World's Moments
+    </div>
+    <div class="second-row">
+      <img src="images/phones.png" class="img-phones">
+      <div class="rigth-column">
+        <div>
+          <img src="images/brand.png" class="img-brand" alt="Instagram">
+          <div class="home-button">
+            <img src="images/home.png" class="img-home">
+            <h3>Log In</h3>
+          </div>
+        </div>
+        <div class="frame">
+          <div class="frame-text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="badge-frame">
+              <img src="images/badge-iphone.png" alt="Download on the App Store" class="space-badge">
+              <img src="images/badge-android.png" alt="Get it on Google Play">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="footer">
+        <b>About Us</b>
+        <b>Support</b>
+        <b>Blog</b>
+        <b>Press</b>
+        <b>API</b>
+        <b>Jobs</b>
+        <b>Privacy</b>
+        <b>Terms</b>
+        <b id="inst-copy">&copy; 2014 Instagram</b>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
