--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,12 +9,12 @@
     <div class="background">
 
     </div>
-    <div class="second-row">
+    <div class="container">
       <img src="images/phones.png" class="img-phones">
-      <div class="rigth-column">
+      <div class="rigth-side">
         <div>
           <img src="images/brand.png" class="img-brand" alt="Instagram">
-          <div class="home-button">
+          <div class="login-button">
             <img src="images/home.png" class="img-home">
             <h3>Log In</h3>
           </div>
