--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  Instagram
+  <div id="fondoAzul" class="fondo1">
+ </div>
+  <div class="container" >
+    <div id="colum1">
+     <img src= "./images/phones.png">
+   </div>
+    <div id= "colum2">
+           <img class= "imgInsta" src = "./images/brand.png">
+           <a class="link" href='#'><img class="imgHome" src ="./images/home.png">Log in</a>
+         <section class= "container2">
+            <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+               Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+               Oh yeah, did we mention it's free?</p>
+                <img src = "./images/badge-iphone.png">
+                <img src= "./images/badge-android.png">
+      </section>
+    </div>
+</div>
+<footer class ="centerFooter">
+  <ul class= "blueColor">
+    <li class="designUl"><a href='#'>About Us</a></li>
+    <li class="designUl"><a href='#'>Support</a></li>
+    <li class="designUl"><a href='#'>Blog</a></li>
+    <li class="designUl"><a href='#'>Press</a></li>
+    <li class="designUl"><a href='#'>API</a></li>
+    <li class="designUl"><a href='#'>Jobs</a></li>
+    <li class="designUl"><a href='#'>Privacy</a></li>
+    <li class="designUl"><a href='#'>Terms</a></li>
+    <li class=" designUl greyColor"> &copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
