Create instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="background">
+  </div>
+  <div id="container-all">
+    <img id="imgphone" src="./images/phones.png" alt="">
+    <div class="container">
+      <div class="container-img-instagram">
+        <img id="imginstagram" src="./images/brand.png" alt="">
+        <button type="button" name="button">
+          <img src="./images/home.png" alt="">
+          <span>Log in</span>
+        </button>
+      </div>
+      <div class="content">
+        <h2>Capture and Share <br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>
+          Instagram is a <span>fast</span>, <span>beautiful</span>
+          and <span>fun</span> way to share your life with friends
+          and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its
+          look and feel, then post to Instagram &mdash; it's that easy.
+          You can even share to Facebook, Twitter, Tumblr and more.
+          It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <ul class="apps-download">
+          <li><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
+          <li><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li><a>About Us</a></li>
+      <li><a>Support</a></li>
+      <li><a>Blog</a></li>
+      <li><a>Press</a></li>
+      <li><a>API</a></li>
+      <li><a>Jobs</a></li>
+      <li><a>Privacy</a></li>
+      <li><a>Terms</a></li>
+      <li id="copy"><a>&copy; 2014 Instagram</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
