--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="background">
+    <div class="container">
+      <div class="left-side">
+        <img class="phone-img" src="images/phones.png">
+      </div>
+      <div class="right-side">
+        <div class="title-block">
+          <img class="instagram-img" src="images/brand.png">
+          <button class= "login">
+            <img class="home-img" src="images/home.png"> 
+            Log in
+          </button>
+          
+        </div>
+        <div class="central-text">
+          <h1 class="capture-share">
+            Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+          <p class="text-content">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p class="text-content">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <p class="text-content">Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="logos">
+          <img class="iphone-img" src="images/badge-iphone.png">
+          <img class="android-img" src="images/badge-android.png">
+        </div>
+      </div>
+    </div>
+    <div class="bottom-side">
+      <footer class="bottom-text">
+        <span class="bottom-element1">
+          ABOUT US SUPPORT BLOG PRESS API JOBS PRIVACY TERMS
+        </span>
+        <span class="bottom-element2">
+          &copy; 2014 INSTAGRAM
+        </span>
+      </footer>
+    </div>
+  </div>
 </body>
+
 </html>
