--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+    <head>
+        <title>Instagram</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="./css/main.css">
+    </head>
 <body>
-  Instagram
+  <div class="background1">
+      <!--contenedor de dos columnas-->
+        <div class="containercentral">
+            <!--primera columna-->
+                <div class="container1">
+                  <div class="iphone">
+                    <img src="./images/phones.png"/>
+                  </div>
+                </div>
+            <!--segunda columna-->
+          <div class="container2">
+                  <div class="instagram">
+                      <img src="./images/brand.png"/>
+                      <div class="button">
+                          <div class="home">
+                            <img src="./images/home.png"/>
+                            <p> Log in </p>
+                          </div>
+                      </div>
+                    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+                <div class="todotexto">
+                    <h1>Capture and Share the World's Moments</h1>
+                    <div class="text">
+                      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                      it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                      Oh yeah, did we mention it's free?</p>
+                    </div>
+                </div>
+    <!-- Download on the App Store
+    Get it on Google Play -->
+                <div class="download">
+                  <img src="./images/badge-iphone.png"/>
+                  <img src="./images/badge-android.png"/>
+                </div>
+          </div>
+  <div class="background2">
+<div class="footer">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</div>
+</div>
+</div>
 </body>
 </html>
