--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="blue-background"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="column1">
+<img class="phones-img" src="images/phones.png" <alt="Phones">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img class="logo-img" src="images/brand.png" alt="Logo Instagram">
 
-  Oh yeah, did we mention it's free?
+<div id="login-bttn" class="login-bttn">
+  <img src="images/home.png" alt="Home"><a href="#"> Log in</a>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="column2">
+  <h1>Capture and Share </br>the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your
+    life </br>with friends and family.</br>
+  </br>Take a picture or video, choose a filter to transform its look </br>and feel,
+    then post to Instagram &mdash; it's that easy. You can </br>even share to Facebook,
+    Twitter, Tumblr and more. </br>It's a new way to see the world. </br>
+  </br>Oh yeah, did we mention it's free?</p></br>
 
-  &copy; 2014 Instagram
+  <img src="images/badge-iphone.png" alt="Apple Store Badge">
+  <img src="images/badge-android.png" alt="Google Play Badge">
+</div>
+
+
+<footer>
+<ul style= "list-style-type: none">
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms<a></li>
+
+  <li class="copy">&copy; 2014 Instagram</li>
+</ul>
+</footer>
+
 </body>
 </html>
