--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="shortcut icon" href="images/brand_logo.png" />
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="big-box">
+    <div class="phones">
+      <img src="images/phones.png" alt="Phones">
+    </div>
+    <div class="container-instagram">
+      <div class="instagram">
+        <img src="images/brand.png" alt="Instagram">
+      </div>
+      <button type="button" name="button" class="login"><img src="images/home.png" alt="Log in">Log in</button>
+    </div>
+    <div class="container-message">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+      <br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+      <br>
+      Oh yeah, did we mention it's free?<br>
+      <br>
+    </p>
+    </div>
+    <div class="container-downloads">
+      <img src="images/badge-iphone.png"><img src="images/badge-android.png">
+    </div>
+  </div>
+  <div class="bottom-nav">
+    <a href="#home">About Us</a>
+    <a href="#news">Support</a>
+    <a href="#contact">Blog</a>
+    <a href="#about">Press</a>
+    <a href="#home">API</a>
+    <a href="#news">Jobs</a>
+    <a href="#contact">Privacy</a>
+    <a href="#about">Terms</a>
+    <p>&copy; 2014 Instagram</p>
+  </div>
 </body>
 </html>
