--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+   <head>
+      <title>Instagram</title>
+      <link href="css/main.css" rel="stylesheet">
+   </head>
+   <body>
+      <div class="top">
+      </div>
+      <div class="container">
+         <img src="images/phones.png" class="phones" tag="iPhoneAndroid">
+         <div class="right">
+            <div>
+               <img src="images/brand.png" class="img-brand" alt="Instagram">
+               <div class="home">
+                  <img src="images/home.png" class="img-home" alt="Home">
+                  <h3>Log In</h3>
+               </div>
+            </div>
+            <div class="box">
+               <div class="boxtext">
+                  <h2>Capture and Share the World's Moments</h2>
+                  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                  <p>Oh yeah, did we mention it's free?</p>
+                  <div class="app">
+                     <img src="images/badge-iphone.png" alt="Download on the App Store" class="app-iphone">
+                     <img src="images/badge-android.png" alt="Get it on Google Play">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="bottom">
+         <b>About Us</b>
+         <b>Support</b>
+         <b>Blog</b>
+         <b>Press</b>
+         <b>API</b>
+         <b>Jobs</b>
+         <b>Privacy</b>
+         <b>Terms</b>
+         <b id="inst">&copy; 2014 Instagram</b>
+      </div>
+   </body>
 </html>
