--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,51 +5,70 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <!--Blue bar section-->
-  <div id="blueSection"></div>
-  <!--Container div-->
-  <div id="general">
+  <!--Blue bar-->
+  <div id="blueBar"></div>
+
+  <!--Central container-->
+  <div id="central">
+
     <!--Left column-->
-    <div id="mobile" class="inline">
-      <img src="./images/phones.png" alt="Mobile-photo">
-    </div>
+    <div id="left"></div>
+
     <!--Right column-->
-    <div id="centralBlock" class="inline">
-      <!--Instagram and log button-->
-      <div>
-        <img src="./images/brand.png" alt="Instagram">
-        <button><img src="./images/home.png" alt="home">Log in</button>
+    <div id="right">
+
+      <!--Instagram logo and Log in-->
+      <div id="header">
+        <img src="./images/brand.png" alt="instagram">
+        <button>
+          <img src="./images/home.png" alt="Log icon">
+          Log in
+        </button>
       </div>
-      <!--Text-->
-      <div class="bg d2">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
-          to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look
-          and feel, then post to Instagram &mdash; it's that easy. You can
-          even share to Facebook, Twitter, Tumblr and more. It's a new way
-          to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <div>
-          <input class="botonApple" type="button">
-          <input class="botonAndroid" type="button">
+
+      <!--Photo base-->
+      <div id="photoBase">
+
+        <!--Text section-->
+        <div id="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b>
+          and <b>fun</b> way to share your life with
+          friends and family</p>
+          <p>Take a picture or video, choose a filter to
+          transform its look and feel, the post to Instagram
+          &mdash; it's that easy. You can even share to Facebook,
+          Twitter, Tumblr and more. It's a new way to see
+          the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
         </div>
-      </div>
-    </div>
-    <!--Footer-->
-    <footer>
-      <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li class="esp">&copy; 2014 Instagram</li>
-      </ul>
-    </footer>
-  </div>
+
+        <!--Buttons-->
+        <div id=buttons>
+
+            <img src="./images/badge-iphone.png" alt="iphone">
+            <img src="./images/badge-android.png" alt="android">
+
+        </div>
+      </div><!--Photo base end-->
+
+    </div><!--Right column end-->
+
+  </div><!--Central container end-->
+
+  <!--Footer-->
+  <footer id="footer">
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li class="copyright">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 </body>
 </html>
