--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class='header'></div>
 
-  Capture and Share the World's Moments
+  <div class = 'left'>
+    <img src="images/phones.png">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class='right'>
+    <div class='logo'>
+      <img src="images/brand.png">
+      <button class='button'><img src="images/home.png">Log In
+      </button>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class='text'>
+      <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a <span class='bold'>fast, beautiful</span> and <span class='bold'>fun</span> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
 
-  &copy; 2014 Instagram
+    <div class='badges'>
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+  </div>
+
+  <div class='footer'>
+    <p>About Us</p>
+    <p>Support</p>
+    <p>Blog</p>
+    <p>Press</p>
+    <p>API</p>
+    <p>Jobs</p>
+    <p>Privacy</p>
+    <p>Terms</p>
+    <p id='copyright'>&copy; 2014 Instagram</p>
+  </div>
+
 </body>
 </html>
