--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="main">
+  <div class="iphone">
+    <img src="images/phones.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="textcontent">
+    <div class="login">
+      <h3><img src="images/home.png"> Log In </h3>
+    </div>
+    <img src="images/brand.png" class="iglogo">
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
+    <div class="topblock">
+    </div>
+    <div class="textbox">
+      <h2>Capture and Share the World's Moments</h2>
+
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way
+        to share your life with friends and family.</p>
+
+      <p>Take a picture or video, choose a filter to transform its look and feel,
+      then post to Instagram &mdash; it's that easy.
+      You can even share to Facebook, Twitter, Tumblr and more.
+      It's a new way to see the world.</p>
+
+      </p>Oh yeah, did we mention it's free?</p>
+
+      <div class="logos">
+        <img src="images/badge-iphone.png"> <img src="images/badge-android.png">
+      </div>
+    </div>
+  </div>
+
+
+
+</div>
+
+</body>
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +55,6 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
-</body>
+</footer>
 </html>
