--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="content">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section id="blue_zone"></section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <figure id="mobile_pic">
+      <center>
+        <img src="images/phones.png" id="mobile_pic" alt="Cool picture about iPhone!">
+      </center>
+    </figure>
 
-  Oh yeah, did we mention it's free?
+    <section id="right_side">
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="header_right">
+        <figure id="mobile_pic">
+          <img src="images/brand.png" alt="instagram caption">
+        </figure>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="login">
+          <button type="button" id="image_button" value="Log in">
+            <strong>Log in</strong>
+            <span>
+              <img src="images/home.png" class="home_pic" alt="Cool picture about iPhone!">
+            </span>
+          </button>
+        </div>
 
-  &copy; 2014 Instagram
+      </div>
+
+      <section id="frame" class="test">
+
+        <h2>Capture and Share
+          <br>the World's Moments</h2>
+
+        Instagram is a
+        <strong>fast</strong>,
+        <strong>beautiful</strong> and
+        <strong>fun</strong> way to share your life with friends and family.
+        <br>
+        <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>
+        <br> Oh yeah, did we mention it's free?
+        <br>
+
+        <figure id="app_store">
+          <img src="images/badge-iphone.png" id="" alt="Iphone caption">
+        </figure>
+
+        <figure id="google_play">
+          <img src="images/badge-android.png" id="" alt="Android caption">
+        </figure>
+
+      </section>
+
+    </section>
+
+    <section id="footer">
+
+      <ul>
+        <li>
+          <a href="#AboutUs">ABOUT US</a>
+        </li>
+        <li>
+          <a href="#Support">SUPPORT</a>
+        </li>
+        <li>
+          <a href="#Blog">BLOG</a>
+        </li>
+        <li>
+          <a href="#Press">PRESS</a>
+        </li>
+        <li>
+          <a href="#API">API</a>
+        </li>
+        <li>
+          <a href="#Jobs">JOBS</a>
+        </li>
+        <li>
+          <a href="#Privacy">PRIVACY</a>
+        </li>
+        <li>
+          <a href="#Terms">TERMS</a>
+        </li>
+        <strong>&copy; 2014 INSTAGRAM</strong>
+      </ul>
+
+    </section>
+
+
+
+
+
+
+  </div>
+
 </body>
+
 </html>
