--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+<link href ="css/main.css" rel="stylesheet">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="bloque1">
+  </div>
+  <div class="bloque2">
+  </div>
+  <div class="bloque3">
+    <div class="imagenmovil">
+      <img src="/Users/virginiaalvarez/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/phones.png">
+    </div>
+    <div class="container">
+      <div class = "con1">
+        <img src = "/Users/virginiaalvarez/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/brand.png">
+        <button>
+          <img src = "/Users/virginiaalvarez/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/home.png">Log in
+        </button>
+      </div>
+      <div class = "con2">
+      <h2>Capture and Share<br/> the World 's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It 's a new way to see the world.</br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Oh yeah, did we mention it's free?</p>
+</div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class = "con3">
+  <img src = "/Users/virginiaalvarez/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+  <img src = "/Users/virginiaalvarez/desktop/ironhack/week1/day2/lab-css-instagram-clone/starter-code/images/badge-android.png">
+      </div>
+      </div>
+      <footer>
+        About Us Support Blog Press API Jobs Privacy Terms <span>&copy; 2014 Instagram</span>
+      </footer>
 </body>
+
 </html>
