--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,17 +2,33 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css"
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
+  <div class="darkblue">
+      <div class="inst-images">
+        <img src="images/brand.png" alt="">
+        <div class="home-login">
+            <img id="login" src="images/home.png" alt="">Log In      
+        </div>
+      </div>
+  </div>
+  <div class="mobile">
+    <img src="images/phones.png" alt="">
+  </div>
+  <div class="text">  
+    Capture and Share the World's Moments
+  
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free?
+  </div>
+  <div>
+    
+  </div>
+  
 
   Download on the App Store
   Get it on Google Play
