--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel=stylesheet href="css/main.css" type="text/css">
 </head>
+
 <body>
-  Instagram
+  <div class="header"></div>
+  <div class="content">
+  <div class="telefonos"><img src="images/phones.png"></div>
+  <div class="cuadrodescription">
+      <div>
+      <img src="images/brand.png">
+      <div class="buttomlogin">
+      <img src="images/home.png">
+      <a class="buttomlogin" href="https://www.instagram.com/accounts/login/?hl=es" target="_blank">Log in</a>
+      </div>
+   </div>
 
-  Capture and Share the World's Moments
+  <div class="description">
+    <div class=bg>
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>
+  <div class="botonesstores">
+    <img src="images/badge-iphone.png" alt="Download on the App Store">
+    <img src="images/badge-android.png" alt="Get it on Google Play">
+  </div>
+</div>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+<ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li>&copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
