--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="main">
+    <div id="home-bg"></div>
+    <div class="wrap">
+        <div class="home-phones" id="iphone">
+            <div id="iphone-overlay">
+<!-- Instagram  -->
+    <img src="images/brand.png" alt="instagram logo">
+    <img src="images/phones.png" alt="iphone mockup" class=iphone>
+  <div class=container>
+      <h1>Capture and Share <br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <p>Oh yeah, did we mention it's free?</p>
+<img src="images/badge-iphone.png" alt="iphone logo">
+<img src="images/badge-android.png" alt="android logo">
+  <p>Download on the App Store
+  Get it on Google Play</p>
+      </div>
+      </div>
+    </div>
+         </div>
+     </div>
+ </div>
+</div> <!-- .main -->
 </body>
+
+<footer>
+<a href="url">About Us</a>
+<a href="url">Support</a>
+<a href="url">Blog</a>
+<a href="url">Press</a>
+<a href="url">API</a>
+<a href="url">Jobs</a>
+<a href="url">Privacy</a>
+<a href="url">Terms</a>
+  &copy; 2014 Instagram
+</footer>
+
 </html>
