--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,21 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
+<div class="iphone">
+
+
+
+<div class="blue-background">
+
+<img class="iphone-img" src="images/phones.png">
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+<div class="frame">
+
+<img class="white-frame" src="images/frame.png">
+
+<div class="white-frame-text">
+
+
+
+<h2 class="title-in-white-frame">Capture and Share the World's Moments</h2>
+<p>  Instagram is a <span class="bold-text">fast, beautiful</span> and <span class="bold-text">fun</span> way to share your life with friends and family.</p>
+<p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<br>
+  Oh yeah, did we mention it's free? </p>
+
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="appstore">
   Download on the App Store
   Get it on Google Play
+</div>
+
+
+<div class="lower-part">
+
 
   About Us
   Support
@@ -26,6 +91,18 @@
   Privacy
   Terms
 
+
+
+
+
   &copy; 2014 Instagram
+</div>
+</div>
+
+
+
+
+
+
 </body>
 </html>
