--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <img class="iphones" src="images/phones.png" alt="Iphones">
+  <div class= container>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="bluething">
+      <img class="gradient" src="bgtile/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img class="brand" src="images/brand.png" alt= "Instagram">
+    <img class="frame" src="images/frame.png">
+    <img class="home" src="images/home.png" alt="Home">
 
-  Oh yeah, did we mention it's free?
+    <h1>Capture and Share <br> the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+    <strong>fun</strong> way to share your life <br> with friends and family.
+    <br><br>Take a picture or video, choose a filter to transform its look <br>
+    and feel, then post to Instagram &mdash; it's that easy. You can <br> even
+    share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.
+    <br><br>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <img class="appstore" src="images/badge-iphone.png" alt= "Download on the App Store">
+    <img class="googlestore" src="images/badge-android.png" alt= "Get it on Google Play">
 
-  &copy; 2014 Instagram
+    <div class="footer">
+      <h3>About Us</h3>
+      <h3>Support</h3>
+      <h3>Blog</h3>
+      <h3>Press</h3>
+      <h3>API</h3>
+      <h3>Jobs</h3>
+      <h3>Privacy</h3>
+      <h3>Terms</h3>
+
+      <h4>&copy; 2014 Instagram</h4>
+    </div>
+
+    </div>
 </body>
 </html>
