--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Instagram</title>
 </head>
+<!--I still need to do this exercise since they gave us
+the option to either work on forEach or the CSS exercise-->
+
 <body>
   Instagram
 
