--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class  = "background">
+    <div class="backgroundBlue">
+    </div>
+    <div class="backgroundWhite">
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
+<div class = "content">
+  <div class = "head">
+      <img id="instagram" src = "images/brand.png">
+      <div class = "logIn">
+        <img id="login" src= "images/home.png">
+        <p>Log In</p>
+      </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class = "subtitle"><h2>Capture and Share the World's Moments<h2></div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div><img src="images/badge-iphone.png"></div>
+  <div><img src="images/badge-android.png"></div>
+</div>
+<div class = "footer">
+  <div>
+    <ol>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ol>
+  </div>
 
-  &copy; 2014 Instagram
+  <div class = "copyright">
+    <p> &copy; 2014 Instagram </p>
+</div>
 </body>
 </html>
