not completed, had to sleep early to avoid getting a cold, will catch up when able

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blueTile">
+    <img src="images/bgtile.png">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phones">
+    <img src="images/phones.png" alt="Picture of Phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="logo">
+    <img src="images/brand.png" alt="Instagram Logo">
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="login">
+    <img src="images/home.png" alt="Login Button">
+    <p> Login </p>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="textSection">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="title">
+      <h2> Capture and Share the World's Moments </h2>
+    </div>
 
-  &copy; 2014 Instagram
+    <div class="text">
+      <p>Instagram is a <strong> fast, beautiful </strong> and <strong> fun </strong> way to share your life with friends and family. </p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+      <p>Oh yeah, did we mention it's free? </p>
+    </div>
+
+    <img src="images/badge-iphone.png" class="appStore" alt="Download on the App Store">
+    <img src="images/badge-android.png" class="googlePlay" alt="Get it on Google Play">
+
+  </div>
+
+  <footer class="bottomOptions">
+
+    <p class="a"> About Us </p>
+    <p class="b"> Support </p>
+    <p class="c"> Blog </p>
+    <p class="d"> Press </p>
+    <p class="e"> API </p>
+    <p class="f"> Jobs </p>
+    <p class="g"> Privacy </p>
+    <p class="h"> Terms </p>
+    <p class="i"> &copy; 2014 Instagram </p>
+
+  </footer>
+
 </body>
+
 </html>
